--- a/ex3 voyages/index.html
+++ b/ex3 voyages/index.html
@@ -1,41 +1,125 @@
-<!doctype html>
-<html class="no-js" lang="">
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
+  <title>Voyages</title>
   <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
-
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
-
-  <meta name="theme-color" content="#fafafa">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-
 <body>
+<div class="container-fluid">
+  <header>
+    <nav class="navbar navbar-expand-lg bg-tertiary">
+      <a class="navbar-brand" href="#">
+        <img class="d-inline-block align-text-top" src="img/logo.png">
+      </a>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
-
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
+      <div id="navbarSupportedContent" class="collapse navbar-collapse">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">Accueil</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Destinations</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Nouvelle-Zélande</a></li>
+              <li><a class="dropdown-item" href="#">Angleterre</a></li>
+              <li><a class="dropdown-item" href="#">Etats-Unis</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="form_contact.html">Formulaire de contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <section class="row">
+    <article class="col-sm-4 ">
+      <img src="img/werner-sevenster-JuP0ZG0UNi0-unsplash.jpg" class="img-thumbnail float-start ">
+      <p>
+        Photo de
+        <a href="https://unsplash.com/@werner7?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Werner Sevenster</a>
+        sur
+        <a href="https://unsplash.com/fr/photos/JuP0ZG0UNi0?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+      </p>
+      <ul class="list-group">
+        <li class="list-group-item">
+          Pays :
+          <span class="badge bg-secondary">Nouvelle-Zélande</span>
+        </li>
+        <li class="list-group-item">
+          Prix :
+          <span class="badge bg-secondary">9500€</span>
+        </li>
+        <li class="list-group-item">
+          Période de départ :
+          <span class="badge bg-secondary">Août</span>
+        </li>
+        <li class="list-group-item">
+          Nombre de jours :
+          <span class="badge bg-secondary">11 jours</span>
+        </li>
+      </ul>
+    </article>
+    <article class="col-sm-4 text-center">
+      <img src="img/ben-collins-CGdKv4BA6GQ-unsplash.jpg" class="img-thumbnail mx-auto d-block">
+      <p>
+        Photo de <a href="https://unsplash.com/@bencollins?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Ben Collins</a>
+        sur
+        <a href="https://unsplash.com/fr/photos/CGdKv4BA6GQ?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+      </p>
+      <ul class="list-group">
+        <li class="list-group-item">
+          Pays :
+          <span class="badge bg-secondary">Angleterre</span>
+        </li>
+        <li class="list-group-item">
+          Prix :
+          <span class="badge bg-secondary">700€</span>
+        </li>
+        <li class="list-group-item">
+          Période de départ :
+          <span class="badge bg-secondary">Septembre</span>
+        </li>
+        <li class="list-group-item">
+          Nombre de jours :
+          <span class="badge bg-secondary">5 jours</span>
+        </li>
+      </ul>
+    </article>
+    <article class="col-sm-4">
+      <img src="img/jesse-collins-ootxpwpyWCU-unsplash.jpg" class="img-thumbnail float-end">
+      <p>
+        Photo de <a href="https://unsplash.com/@jtc?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Jesse Collins</a>
+        sur
+        <a href="https://unsplash.com/fr/photos/ootxpwpyWCU?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+      </p>
+      <ul class="list-group">
+        <li class="list-group-item">
+          Pays :
+          <span class="badge bg-secondary">Etats-Unis</span>
+        </li>
+        <li class="list-group-item">
+          Prix :
+          <span class="badge bg-secondary">3000€</span>
+        </li>
+        <li class="list-group-item">
+          Période de départ :
+          <span class="badge bg-secondary">Juillet</span>
+        </li>
+        <li class="list-group-item">
+          Nombre de jours :
+          <span class="badge bg-secondary">15 jours</span>
+        </li>
+      </ul>
+    </article>
+  </section>
+  <footer class="bg-info mt-5">
+    <p class="text-center">Site de Voyages - OCH
+    </p>
+  </footer>
+</div>
 </body>
-
 </html>
